US5903 - DDK Foundation Fix for footer - keeps it from overlapping everything and it stays at the bottom of the screen.

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -1,8 +1,5 @@
 .footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
-  height: 251px;
   background-color: $footer-background;
   padding: 2em 0;
 
