--- a/src/styles/application.scss
+++ b/src/styles/application.scss
@@ -2,10 +2,4 @@
 @import 'variables';
 @import 'header';
 @import 'footer';
-
-.ddk-wrapper {
-  min-height: 100%;
-  height: auto;
-  height: 100%;
-  margin: 0 auto -251px;
-}
+@import 'component-list';
